--- a/HTML/chufang.html
+++ b/HTML/chufang.html
@@ -12,8 +12,10 @@
   <script src="../JS/jquery-1.11.3.js"></script>
   <script src="../JS/index.js"></script>
   <script src="../JS/chufang.js"></script>
+  <script src="../JS/add.js"></script>
 </head>
 <body>
+  <div id="header"></div>
   <div class="main_w">
     <div class="main">
       <!-- part1 -->
@@ -93,7 +95,7 @@
           <div class="tabcon" po="1" style="display: none">
             <dl>
               <dt>选择难度</dt>
-              <dd>
+              <dd class="">
                 <a href="javascript:;">新手尝试</a>
                 <a href="javascript:;">初级尝试</a>
                 <a href="javascript:;">初级水平</a>
@@ -115,6 +117,16 @@
                 <a href="javascript:;">炸</a>
                 <a href="javascript:;">烘焙</a>
                 <a href="javascript:;">微波</a>
+                <!-- <a href="javascript:;">烤</a>
+                <a href="javascript:;">煲</a>
+                <a href="javascript:;">焖</a>
+                <a href="javascript:;">冻</a>
+                <a href="javascript:;">烙</a>
+                <a href="javascript:;">砂锅</a>
+                <a href="javascript:;">腌</a>
+                <a href="javascript:;">卤</a>
+                <a href="javascript:;">酱</a>
+                <a href="javascript:;">烩</a> -->
               </dd>
               <dd class="long">展开全部 >></dd>
             </dl>
@@ -549,5 +561,6 @@
       </div>
     </div>
   </div>
+  <div id="footer"></div>
 </body>
 </html>
