--- a/HTML/content.html
+++ b/HTML/content.html
@@ -13,8 +13,10 @@
   <script src="../JS/jquery-1.11.3.js"></script>
   <script src="../JS/index.js"></script>
   <script src="../JS/content.js"></script>
+  <script src="../JS/add.js"></script>
 </head>
 <body>
+  <div id="header"></div>
   <div class="main_w">
     <div class="main">
       <!-- 路径 -->
@@ -287,6 +289,7 @@
               </div>
             </div>
             <h2 class="cp_h2">蜜汁菜谱成品图</h2>
+            <!-- 小轮播图 -->
             <div class="cp_banner">
               <img src="../images/content/banner1.jpg">
               <img src="../images/content/banner2.jpg">
@@ -429,5 +432,6 @@
       </div>
     </div>
   </div>
+  <div id="footer"></div>
 </body>
 </html>
