--- a/HTML/index.html
+++ b/HTML/index.html
@@ -11,8 +11,10 @@
   <link rel="stylesheet" href="../CSS/base.css">
   <script src="../JS/jquery-1.11.3.js"></script>
   <script src="../JS/index.js"></script>
+  <script src="../JS/add.js"></script>
 </head>
 <body>
+  <div id="header"></div>
   <div class="main_w">
     <div class="main">
       <!-- 1F轮播图 --> 
@@ -20,7 +22,7 @@
         <div class="carousel_main">
           <div class="carousel_item carousel_item_3">
             <h3 class="ttitles ttitles_carousel">今日午餐推荐：午餐荤素搭配，更健康</h3>
-            <ul>
+            <ul class="clearfix">
               <li>
                 <a href="#" title="蚝油豆腐" class="img">
                   <img src="../images/index/72866541bc8cd6a4b1f1415d210baffd.jpg">
@@ -621,5 +623,6 @@
       </div>
     </div>
   </div>
+  <div id="footer"></div>
 </body>
 </html>
