完成了首页轮播图

--- a/HTML/chufang.html
+++ b/HTML/chufang.html
@@ -232,7 +232,7 @@
           <div class="listyle1_list">
             <!-- 图1 -->
             <div class="listyle1">
-              <a href="#" title="小米山药粥" class="big">
+              <a href="javascript:;" title="小米山药粥" class="big">
                 <img class="img" alt="小米山药粥" src="../images/chufang/a5120456_148076132206435.jpg">
                 <div class="i_w">
                   <div class="i">
@@ -253,7 +253,7 @@
             </div>
             <!-- 图2 -->
             <div class="listyle1">
-              <a href="#" title="奥尔良烧烤味肉饼" class="big">
+              <a href="javascript:;" title="奥尔良烧烤味肉饼" class="big">
                 <img class="img" alt="奥尔良烧烤味肉饼" src="../images/chufang/a4420184_156272768313812.jpg">
                 <div class="i_w">
                   <div class="i">
@@ -274,7 +274,7 @@
             </div>
             <!-- 图3 -->
             <div class="listyle1">
-              <a href="#" title="红豆薏米甜酒酿" class="big">
+              <a href="javascript:;" title="红豆薏米甜酒酿" class="big">
                 <img class="img" alt="红豆薏米甜酒酿" src="../images/chufang/a5140155_156207913612379.jpg">
                 <div class="i_w">
                   <div class="i">
@@ -295,7 +295,7 @@
             </div>
             <!-- 图4 -->
             <div class="listyle1">
-              <a href="#" title="牛油果香蕉思慕雪" class="big">
+              <a href="javascript:;" title="牛油果香蕉思慕雪" class="big">
                 <img class="img" alt="牛油果香蕉思慕雪" src="../images/chufang/a5140155_155196688335045.jpg">
                 <div class="i_w">
                   <div class="i">
@@ -316,7 +316,7 @@
             </div>
             <!-- 图5 -->
             <div class="listyle1">
-              <a href="#" title="香肠飞饼卷" class="big">
+              <a href="javascript:;" title="香肠飞饼卷" class="big">
                 <img class="img" alt="香肠飞饼卷" src="../images/chufang/a5140155_155196394270704.jpg">
                 <div class="i_w">
                   <div class="i">
@@ -337,7 +337,7 @@
             </div>
             <!-- 图6 -->
             <div class="listyle1">
-              <a href="#" title="驴打滚" class="big">
+              <a href="javascript:;" title="驴打滚" class="big">
                 <img class="img" alt="驴打滚" src="../images/chufang/a13410386_155196477266046.jpg">
                 <div class="i_w">
                   <div class="i">
@@ -358,7 +358,7 @@
             </div>
             <!-- 图7 -->
             <div class="listyle1">
-              <a href="#" title="花开富贵香肠菇" class="big">
+              <a href="javascript:;" title="花开富贵香肠菇" class="big">
                 <img class="img" alt="花开富贵香肠菇" src="../images/chufang/a430336_155194389396290.jpg">
                 <div class="i_w">
                   <div class="i">
@@ -379,7 +379,7 @@
             </div>
             <!-- 图8 -->
             <div class="listyle1">
-              <a href="#" title="牛油果香蕉思慕雪" class="big">
+              <a href="javascript:;" title="牛油果香蕉思慕雪" class="big">
                 <img class="img" alt="牛油果香蕉思慕雪" src="../images/chufang/a5140155_155196688335045.jpg">
                 <div class="i_w">
                   <div class="i">
@@ -400,7 +400,7 @@
             </div>
             <!-- 图9 -->
             <div class="listyle1">
-              <a href="#" title="香肠飞饼卷" class="big">
+              <a href="javascript:;" title="香肠飞饼卷" class="big">
                 <img class="img" alt="香肠飞饼卷" src="../images/chufang/a5140155_155196394270704.jpg">
                 <div class="i_w">
                   <div class="i">
@@ -421,7 +421,7 @@
             </div>
             <!-- 图10 -->
             <div class="listyle1">
-              <a href="#" title="驴打滚" class="big">
+              <a href="javascript:;" title="驴打滚" class="big">
                 <img class="img" alt="驴打滚" src="../images/chufang/a13410386_155196477266046.jpg">
                 <div class="i_w">
                   <div class="i">
@@ -442,7 +442,7 @@
             </div>
             <!-- 图11 -->
             <div class="listyle1">
-              <a href="#" title="花开富贵香肠菇" class="big">
+              <a href="javascript:;" title="花开富贵香肠菇" class="big">
                 <img class="img" alt="花开富贵香肠菇" src="../images/chufang/a430336_155194389396290.jpg">
                 <div class="i_w">
                   <div class="i">
@@ -463,7 +463,7 @@
             </div>
             <!-- 图12 -->
             <div class="listyle1">
-              <a href="#" title="牛油果香蕉思慕雪" class="big">
+              <a href="javascript:;" title="牛油果香蕉思慕雪" class="big">
                 <img class="img" alt="牛油果香蕉思慕雪" src="../images/chufang/a5140155_155196688335045.jpg">
                 <div class="i_w">
                   <div class="i">
@@ -484,7 +484,7 @@
             </div>
             <!-- 图13 -->
             <div class="listyle1">
-              <a href="#" title="香肠飞饼卷" class="big">
+              <a href="javascript:;" title="香肠飞饼卷" class="big">
                 <img class="img" alt="香肠飞饼卷" src="../images/chufang/a5140155_155196394270704.jpg">
                 <div class="i_w">
                   <div class="i">
@@ -505,7 +505,7 @@
             </div>
             <!-- 图14 -->
             <div class="listyle1">
-              <a href="#" title="驴打滚" class="big">
+              <a href="javascript:;" title="驴打滚" class="big">
                 <img class="img" alt="驴打滚" src="../images/chufang/a13410386_155196477266046.jpg">
                 <div class="i_w">
                   <div class="i">
@@ -526,7 +526,7 @@
             </div>
             <!-- 图15 -->
             <div class="listyle1">
-              <a href="#" title="花开富贵香肠菇" class="big">
+              <a href="javascript:;" title="花开富贵香肠菇" class="big">
                 <img class="img" alt="花开富贵香肠菇" src="../images/chufang/a430336_155194389396290.jpg">
                 <div class="i_w">
                   <div class="i">
