--- a/HTML/header.html
+++ b/HTML/header.html
@@ -183,8 +183,8 @@
       <li><a class="link" href="javascript:;"><strong>产品下载</strong></a></li>
     </ul>
   </div>
-  <div class="back_to_top">
-    <a href="#" class="toTop"></a>
+  <div class="back_to_top" id="back_to_top">
+    <a href="javascript:;" class="toTop"></a>
   </div>
 </body>
 </html>
