--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,7 +10,9 @@
   <link rel="stylesheet" href="../CSS/index.css">
   <link rel="stylesheet" href="../CSS/base.css">
   <script src="../JS/jquery-1.11.3.js"></script>
+  <!-- <script src="../JS/jquery-3.4.1.js"></script> -->
   <script src="../JS/index.js"></script>
+  <!-- <script src="../JS/header.js"></script> -->
   <script src="../JS/add.js"></script>
 </head>
 <body>
