--- a/HTML/header.html
+++ b/HTML/header.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge,chrome=1">
   <title>美食杰</title>
-  <!-- <link rel="stylesheet" href="../CSS/normalize.css"> -->
+  <link rel="stylesheet" href="../CSS/normalize.css">
   <link rel="stylesheet" href="../CSS/header.css">
   <link rel="stylesheet" href="../CSS/base.css">
   <script src="../JS/jquery-1.11.3.js"></script>
